# module_generator

./: Cargo.toml  README.MD  README.md
src/: main.rs  tree_config.rs
src/file_man/: maker.rs  mod.rs  reader.rs
src/module_tree/: mod.rs  tree_config.rs
