[package]
name = "module_generator"
version = "0.2.2    "
authors = ["michael hertsens <michael.hertsens@student.odisee.be>"]
edition = "2018"
description = "A small Rust development tool, to make a modules and submodules and to write the dependencies in the main rust file."
keywords = ["cli","rust-tool"]
readme = "README.md"
repository = "https://github.com/mich2000/module_generator"
homepage = "https://github.com/mich2000/module_generator"
license = "MIT OR Apache-2.0"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'